# DESIA

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.rst
cmake/: FindGraphviz.cmake  FindMOSEK.cmake
data/input_puz/: Cube_4x4x4_origin.puz  Cube_hollow_4x4x4_origin.puz  dog_origin.puz
data/mesh/: zcylinder.objbak
data/result_puz/: cartoon_dog.puz
ext/: CMakeLists.txt
input_puz/: Cube_5x5x5_origin.puz  bunny_origin.puz
libigl/include/igl/mosek/: mosek_linprog.cpp
libigl/include/igl/viewer/: ViewerData.cpp
libigl/shared/cmake/: libigl.cmake
result_puz/: Cube_4x4x4_K9_01.puz  Cube_Hollow_4x4x4_K7  cube_5x5x5_K16.puz
src/: Assembly.cpp  Assembly.h  CMakeLists.txt  ColorCoding.h  DirectedGraph.h  DirectedGraphSSC.cpp  DirectedGraphSSC.h  InterlockSDChecking.cpp  InterlockSDChecking.h  Part.h  UtilityFunc.h  main.cpp
src/ContactGraph/: ContactGraph.cpp  ContactGraphMosekSolver.cpp
src/Voxel/: MeshVoxelizer.cpp  MeshVoxelizer.h  PuzzleCandidateFilter.h  VPuzzleGraph.cpp  VPuzzleGraph.h  VoxelElement.h  VoxelRandom.cpp  VoxelRandom.h  VoxelizedInterface.cpp  VoxelizedInterface.h  VoxelizedPart.cpp  VoxelizedPart.h  VoxelizedPartition.cpp  VoxelizedPartition.h  VoxelizedPuzzle.cpp  VoxelizedPuzzle.h  VoxelizedPuzzleDisassembly.cpp  VoxelizedPuzzleDisassembly.h  VoxelizedPuzzleTree.cpp  VoxelizedPuzzleTree.h  VoxelizedRenderCube.cpp  VoxelizedRenderCube.h  VoxelizedRenderSphere.cpp  VoxelizedRenderSphere.h  voxelizer.cpp  voxelizer.h
src/apps/: CMakeLists.txt
src/apps/plotApps/: CMakeLists.txt  helpers.h  main.cpp  test.cpp
src/backup/: UtilityFunc.h  main.cpp
src/backup/ContactGraph/: ContactGraph.h  ContactGraphEdge.h  ContactGraphMosekSolver.h  ContactGraphNode.h
src/libs/: CMakeLists.txt
src/libs/voxel/: CMakeLists.txt
src/libs/voxel/include/voxel/: Assembly.h  ColorCoding.h  DirectedGraph.h  DirectedGraphSSC.h  InterlockSDChecking.h  MeshVoxelizer.h  Part.h  PuzzleCandidateFilter.h  VPuzzleGraph.h  VoxelElement.h  VoxelRandom.h  VoxelizedInterface.h  VoxelizedPart.h  VoxelizedPartition.h  VoxelizedPuzzle.h  VoxelizedPuzzleDisassembly.h  VoxelizedPuzzleTree.h  VoxelizedRenderCube.h  VoxelizedRenderSphere.h
src/libs/voxel/src/: Assembly.cpp  DirectedGraphSSC.cpp  InterlockSDChecking.cpp  MeshVoxelizer.cpp  VPuzzleGraph.cpp  VoxelRandom.cpp  VoxelizedInterface.cpp  VoxelizedPart.cpp  VoxelizedPartition.cpp  VoxelizedPuzzle.cpp  VoxelizedPuzzleDisassembly.cpp  VoxelizedPuzzleTree.cpp  VoxelizedRenderCube.cpp  VoxelizedRenderSphere.cpp  voxelizer.cpp
